--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: stephengrider/multi-server
+          image: viaches/multi-server
           ports:
             - containerPort: 5000
           env:
