updated command in .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - gcloud config set project imperial-glyph-297120
   - gcloud config set compute/zone europe-west2-a
   - gcloud container clusters get-credentials multi-cluster
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password_stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t viaches/react-test -f ./client/Dockerfile.dev ./client
 
 script:
